Add user model, refactor existing code

--- a/src/server/views/login.pug
+++ b/src/server/views/login.pug
@@ -3,7 +3,7 @@ block content
   h5 Login
   form(action='/auth/login', method='post')
     .form-group
-      input.form-control(type='text', name='username', placeholder='Username')
+      input.form-control(type='text', name='username', placeholder='E-Mail')
     .form-group
       input.form-control(type='password', name='password', placeholder='Password')
     button.btn.btn-primary(type='submit') Submit
