--- a/src/server/views/users.pug
+++ b/src/server/views/users.pug
@@ -6,6 +6,7 @@ block content
     table.table.table-hover
       thead
         tr
+          th(scope='col') Id
           th(scope='col') First name
           th(scope='col') Last name
           th(scope='col') E-Mail
@@ -15,6 +16,7 @@ block content
       tbody
         each user in users
           tr
+            td #{user['id']}
             td #{user['firstName']}
             td #{user['lastName']}
             td #{user['username']}
