--- a/src/server/views/layout.pug
+++ b/src/server/views/layout.pug
@@ -11,7 +11,10 @@ html
               a.nav-link(href='/') Main
           li.nav-item
             h5
-              a.nav-link(href='/auth/register') Register
+              a.nav-link(href='/users') All users
+          li.nav-item
+            h5
+              a.nav-link(href='/auth/register') Register new user
         if userAuthenticated
           a(href='/auth/logout') Logout
         else
