--- a/src/server/views/home.pug
+++ b/src/server/views/home.pug
@@ -2,3 +2,12 @@ extends layout.pug
 block content
   p
     h5 Home page
+  if flashUserBlocked.includes('You\'re blocked, ha-ha-ha!')
+    .alert.alert-dark(role='alert')
+      | #{flashUserBlocked}
+  if flashUserLoginSuccessful.includes('Welcome')
+    .alert.alert-success(role='alert')
+      | #{flashUserLoginSuccessful}
+  if flashUserLoginError.includes('Login failed. Try again with another e-mail or password')
+    .alert.alert-danger(role='alert')
+      | #{flashUserLoginError}
