--- a/src/server/views/users.pug
+++ b/src/server/views/users.pug
@@ -41,3 +41,9 @@ block content
               a(href='/users/' + user['id']) Edit
   else
     h5 No users
+  p #{flashUpdateError}
+  p #{flashUpdateSuccess}
+  p #{flashRegisterSuccess}
+  p #{flashPasswordUpdateError}
+  p #{flashPasswordUpdateSuccess}
+  p #{flash[1]}
