--- a/src/server/views/register.pug
+++ b/src/server/views/register.pug
@@ -1,9 +1,8 @@
 extends layout.pug
 block content
   h5 Register
-  if flashRegisterError.includes('Registration failed')
-    .alert.alert-danger(role='alert')
-      | #{flashRegisterError}
+  if flash.includes('Registration failed')
+    .alert.alert-danger(role='alert') #{flash}
   form(action='/auth/register', method='post')
     .form-group
       input.form-control(type='text', name='firstName', placeholder='First Name')
