--- a/src/server/views/merchantManager.pug
+++ b/src/server/views/merchantManager.pug
@@ -1,4 +1,4 @@
 extends layout
 block content
   p
-    h5 Page visible only by merchant manager
+    h5 Page visible only by admin and merchant manager
