--- a/src/server/views/categoryManager.pug
+++ b/src/server/views/categoryManager.pug
@@ -1,4 +1,4 @@
 extends layout
 block content
   p
-    h5 Page visible only by category manager
+    h5 Page visible only by admin and category manager
