--- a/src/server/views/user.pug
+++ b/src/server/views/user.pug
@@ -1,28 +1,28 @@
 extends layout.pug
 block content
   p
-    h5 Edit user #{user['username']}
-  if user
+    h5 Edit user #{params['username']}
+  if params
     form(action='/users/update', method='post')
-      input(type='hidden', name='id', value=user['id'])
+      input(type='hidden', name='id', value=params['id'])
       .form-group
-        input.form-control(type='text', name='firstName', value=user['firstName'], placeholder='First Name')
+        input.form-control(type='text', name='firstName', value=params['firstName'], placeholder='First Name')
       .form-group
-        input.form-control(type='text', name='lastName', value=user['lastName'], placeholder='Last Name')
+        input.form-control(type='text', name='lastName', value=params['lastName'], placeholder='Last Name')
       .form-group
-        label(for='roles') Role - current is #{user['role']}
+        label(for='roles') Role - current is #{params['role']}
         select#roles.form-control(name='role')
           option(value='Merchant Manager') Merchant Manager
           option(value='Category Manager') Category Manager
       .form-group
-        label(for='status') Status - current is #{user['status']}
+        label(for='status') Status - current is #{params['status']}
         select#status.form-control(name='status')
           option(value='Active') Active
           option(value='Blocked') Blocked
       button.btn.btn-primary(type='submit') Submit
     br
-    a(href='/users/' + user['id'] + '/username') Change username
+    a(href='/users/' + params['id'] + '/username') Change username
     br
-    a(href='/users/' + user['id'] + '/password') Change password
+    a(href='/users/' + params['id'] + '/password') Change password
   else
     h5 No such user
